<resources>
    <string name="app_name" />
    <string name="login">вход</string>
    <string name="country_code">+996</string>
    <string name="log_in">войти</string>
    <string name="registration">регистрация</string>
    <string name="password">пароль</string>
    <string name="get_code">получить код</string>
    <string name="change_number">изменить номер</string>
    <string name="wrong_code">неверный код</string>
    <string name="send_again">отправить повторно</string>
    <string name="pass_hint">****</string>
    <string name="number_hint">+996 123 456 789</string>
    <string name="we_sent_code">мы отправили смс с кодом на</string>
    <string name="approve">подтвердить</string>
    <string name="sms_code">смс-код</string>
    <string name="name_hint">Каныкей</string>
    <string name="name_needed">имя*</string>
    <string name="name">имя</string>
    <string name="password_needed">пароль*</string>
    <string name="number_needed">номер телефона*</string>
    <string name="_123456">123456</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty" />
    <string name="omela">OMELA</string>
    <string name="call_us">позвоните нам</string>
    <string name="categories">КАТЕГОРИИ</string>
    <string name="tops">ХИТЫ ПРОДАЖ</string>
    <string name="author">АВТОРСКИЕ БУКЕТЫ</string>
    <string name="sale">РАСПРОДАЖА</string>
    <string name="need_help">НУЖНА ПОМОЩЬ?</string>
    <string name="tag_show">R.drawable.ic_visible</string>
    <string name="filter">ФИЛЬТР</string>
    <string name="basket">Корзина</string>
    <string name="clear">очистить</string>
    <string name="summ">сумма заказа:</string>
    <string name="salee">скидка:</string>
    <string name="placeholder">15 % - Светлое воспоминание</string>
    <string name="_20_800_c">20 800 c</string>
    <string name="_1_200_c">1 200 c</string>
    <string name="totall">ИТОГО:</string>
    <string name="_19600_c">19600 c</string>
    <string name="oformit">оформить заказ</string>
    <string name="to_basket">в корзину</string>
    <string name="contentt">состав:</string>
    <string name="sizee">размер букета:</string>
    <string name="description">ОПИСАНИЕ</string>
    <string name="neww">НОВИНКА</string>
    <string name="comments">комментарии</string>
    <string name="_5">/5</string>
    <string name="description_proof">соответсвует описанию</string>
    <string name="price_quality">цена/качество</string>
    <string name="service">сервис</string>
    <string name="my_profile">Мой профиль</string>
    <string name="log_out">выйти</string>
    <string name="shop_branches">филиалы магазинов</string>
    <string name="history_of_orders">история заказов</string>
    <string name="favorites">Избранные</string>
    <string name="nothing_here">здесь ничего нет</string>
    <string name="ordering">оформление заказа</string>
    <string name="branch1">Байтик Баатыра, 49</string>
    <string name="branch2">проспект Чуй 147/1</string>
    <string name="branch3">Манаса, 47</string>
    <string name="branch4">Юнусалиева 160/1</string>
    <string name="branches_caps">ФИЛИАЛЫ:</string>
    <string name="status_of_order">статус заказа</string>
    <string name="await_call">ожидание звонка</string>
    <string name="call_in_10_mins">вам перезвонят в течении 10 мин</string>
    <string name="courier_got_order">КУРЬЕР ПОЛУЧИЛ ЗАКАЗ</string>
    <string name="come_in_hour">прибудет в течении 1 часа</string>
    <string name="omw">КУРЬЕР В ПУТИ</string>
    <string name="courier_here">КУРЬЕР ПРИБЫЛ</string>
    <string name="order_finished">ЗАКАЗ ЗАВЕРШЕН</string>
    <string name="send">отправить</string>
    <string name="rate_work">оценка работы</string>
    <string name="rate_omela">ОЦЕНИТЕ РАБОТУ OMELA</string>
    <string name="branches">филиалы</string>
    <string name="baitik_bbatyra">г. Бишкек, Байтик Батыра 49</string>
    <string name="manasa">г. Бишкек, Манаса 47</string>
    <string name="chui">г. Бишкек, проспект чуй 147/1</string>
    <string name="yunusalieva">г. Бишкек, Юнусалиева 160/1</string>
    <string name="working_hours">время работы 09:00 - 20:00</string>
    <string name="search">поиск</string>
    <string name="price">цена</string>
    <string name="_4_000_6_000">4 000 - 6 000</string>
    <string name="_6_000_8_000">6 000 - 8 000</string>
    <string name="_8_000_10_000">8 000 - 10 000</string>
    <string name="_10_000_12_000">10 000 - 12 000</string>
    <string name="_12_000_14_000">12 000 - 14 000</string>
    <string name="_14_000_16_000">14 000 - 16 000</string>
    <string name="edit">редактировать профиль</string>
    <string name="editting">редактирование</string>
    <string name="save">сохранить</string>
    <string name="current_order">текущий заказ</string>
</resources>